--- a/RadiologyAI_Updated.ipynb
+++ b/RadiologyAI_Updated.ipynb
@@ -112,39 +112,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eyfNr36ZKESZ",
-        "outputId": "748d108c-07e8-4f4e-d39d-35003801d587"
+        "outputId": "071eb3e6-20a0-4dbe-fba9-7c740d8df2d0"
       },
       "source": [
         "# Checking the GPU information\n",
         "\n",
         "!nvidia-smi"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mon Oct 14 04:11:58 2024       \n",
-            "+---------------------------------------------------------------------------------------+\n",
-            "| NVIDIA-SMI 535.104.05             Driver Version: 535.104.05   CUDA Version: 12.2     |\n",
-            "|-----------------------------------------+----------------------+----------------------+\n",
-            "| GPU  Name                 Persistence-M | Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
-            "| Fan  Temp   Perf          Pwr:Usage/Cap |         Memory-Usage | GPU-Util  Compute M. |\n",
-            "|                                         |                      |               MIG M. |\n",
-            "|=========================================+======================+======================|\n",
-            "|   0  Tesla T4                       Off | 00000000:00:04.0 Off |                    0 |\n",
-            "| N/A   36C    P8               9W /  70W |      0MiB / 15360MiB |      0%      Default |\n",
-            "|                                         |                      |                  N/A |\n",
-            "+-----------------------------------------+----------------------+----------------------+\n",
-            "                                                                                         \n",
-            "+---------------------------------------------------------------------------------------+\n",
-            "| Processes:                                                                            |\n",
-            "|  GPU   GI   CI        PID   Type   Process name                            GPU Memory |\n",
-            "|        ID   ID                                                             Usage      |\n",
-            "|=======================================================================================|\n",
-            "|  No running processes found                                                           |\n",
-            "+---------------------------------------------------------------------------------------+\n"
+            "/bin/bash: line 1: nvidia-smi: command not found\n"
           ]
         }
       ]
@@ -166,7 +147,7 @@
         "from sklearn.metrics import classification_report\n",
         "from sklearn.metrics import confusion_matrix"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -181,16 +162,37 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "BfJ73zhh9YO8"
+        "id": "BfJ73zhh9YO8",
+        "outputId": "f6ae4363-0530-492d-fe84-6bb61e1c14cd",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 321
+        }
       },
       "source": [
         "# Mounting Google drive to save models, and etc.\n",
         "\n",
-        "# from google.colab import drive\n",
-        "# drive.mount('/content/drive')"
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "MessageError",
+          "evalue": "Error: credential propagation was unsuccessful",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mMessageError\u001b[0m                              Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-3799802167.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mgoogle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolab\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mdrive\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mdrive\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmount\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/content/drive'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/google/colab/drive.py\u001b[0m in \u001b[0;36mmount\u001b[0;34m(mountpoint, force_remount, timeout_ms, readonly)\u001b[0m\n\u001b[1;32m     95\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mmount\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmountpoint\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mforce_remount\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtimeout_ms\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m120000\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreadonly\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     96\u001b[0m   \u001b[0;34m\"\"\"Mount your Google Drive at the specified mountpoint path.\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 97\u001b[0;31m   return _mount(\n\u001b[0m\u001b[1;32m     98\u001b[0m       \u001b[0mmountpoint\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     99\u001b[0m       \u001b[0mforce_remount\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mforce_remount\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/google/colab/drive.py\u001b[0m in \u001b[0;36m_mount\u001b[0;34m(mountpoint, force_remount, timeout_ms, ephemeral, readonly)\u001b[0m\n\u001b[1;32m    132\u001b[0m   )\n\u001b[1;32m    133\u001b[0m   \u001b[0;32mif\u001b[0m \u001b[0mephemeral\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 134\u001b[0;31m     _message.blocking_request(\n\u001b[0m\u001b[1;32m    135\u001b[0m         \u001b[0;34m'request_auth'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    136\u001b[0m         \u001b[0mrequest\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0;34m'authType'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'dfs_ephemeral'\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/google/colab/_message.py\u001b[0m in \u001b[0;36mblocking_request\u001b[0;34m(request_type, request, timeout_sec, parent)\u001b[0m\n\u001b[1;32m    174\u001b[0m       \u001b[0mrequest_type\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrequest\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparent\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mparent\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexpect_reply\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    175\u001b[0m   )\n\u001b[0;32m--> 176\u001b[0;31m   \u001b[0;32mreturn\u001b[0m \u001b[0mread_reply_from_input\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrequest_id\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtimeout_sec\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/google/colab/_message.py\u001b[0m in \u001b[0;36mread_reply_from_input\u001b[0;34m(message_id, timeout_sec)\u001b[0m\n\u001b[1;32m    101\u001b[0m     ):\n\u001b[1;32m    102\u001b[0m       \u001b[0;32mif\u001b[0m \u001b[0;34m'error'\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mreply\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 103\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mMessageError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreply\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'error'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    104\u001b[0m       \u001b[0;32mreturn\u001b[0m \u001b[0mreply\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'data'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    105\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mMessageError\u001b[0m: Error: credential propagation was unsuccessful"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -199,42 +201,42 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "115853f1-fea7-4f8e-b343-7b4939833bf2"
+        "outputId": "dfea1eb3-1f4c-4f4d-d930-f1ad5d996185"
       },
       "source": [
         "# Downloading the Chest X-ray dataset\n",
         "\n",
         "!wget https://www.dropbox.com/s/oq0apzpkgql5rgo/Chest_X_ray%28Pneumonia%29.zip?dl=1 -O 'archive.zip'"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2024-10-14 04:12:04--  https://www.dropbox.com/s/oq0apzpkgql5rgo/Chest_X_ray%28Pneumonia%29.zip?dl=1\n",
-            "Resolving www.dropbox.com (www.dropbox.com)... 162.125.81.18, 2620:100:6031:18::a27d:5112\n",
-            "Connecting to www.dropbox.com (www.dropbox.com)|162.125.81.18|:443... connected.\n",
+            "--2025-08-31 04:26:26--  https://www.dropbox.com/s/oq0apzpkgql5rgo/Chest_X_ray%28Pneumonia%29.zip?dl=1\n",
+            "Resolving www.dropbox.com (www.dropbox.com)... 162.125.85.18, 2620:100:6031:18::a27d:5112\n",
+            "Connecting to www.dropbox.com (www.dropbox.com)|162.125.85.18|:443... connected.\n",
             "HTTP request sent, awaiting response... 302 Found\n",
             "Location: https://www.dropbox.com/scl/fi/h8gkjtnioeh7sp3ty4te3/Chest_X_ray-Pneumonia.zip?rlkey=ssukmp8quiuub1g999gw0lmuk&dl=1 [following]\n",
-            "--2024-10-14 04:12:05--  https://www.dropbox.com/scl/fi/h8gkjtnioeh7sp3ty4te3/Chest_X_ray-Pneumonia.zip?rlkey=ssukmp8quiuub1g999gw0lmuk&dl=1\n",
+            "--2025-08-31 04:26:27--  https://www.dropbox.com/scl/fi/h8gkjtnioeh7sp3ty4te3/Chest_X_ray-Pneumonia.zip?rlkey=ssukmp8quiuub1g999gw0lmuk&dl=1\n",
             "Reusing existing connection to www.dropbox.com:443.\n",
             "HTTP request sent, awaiting response... 302 Found\n",
-            "Location: https://uc22c3992d71ab67165aa1bf9d38.dl.dropboxusercontent.com/cd/0/inline/Ccb8C5ftPpr2-RYGc99B4LDUEq55jxhgfgZ46HWe02LAAMKyNAWoOXqw9tTHzvvTk4-oxnFrGBfiUez7UuhziLRt8-EBa9CkR7VDnTiKUfY2Faa19NeiSJC-uRMweXZVw9DYBVVwaxxlZUXb7chxJShL/file?dl=1# [following]\n",
-            "--2024-10-14 04:12:06--  https://uc22c3992d71ab67165aa1bf9d38.dl.dropboxusercontent.com/cd/0/inline/Ccb8C5ftPpr2-RYGc99B4LDUEq55jxhgfgZ46HWe02LAAMKyNAWoOXqw9tTHzvvTk4-oxnFrGBfiUez7UuhziLRt8-EBa9CkR7VDnTiKUfY2Faa19NeiSJC-uRMweXZVw9DYBVVwaxxlZUXb7chxJShL/file?dl=1\n",
-            "Resolving uc22c3992d71ab67165aa1bf9d38.dl.dropboxusercontent.com (uc22c3992d71ab67165aa1bf9d38.dl.dropboxusercontent.com)... 162.125.81.15, 2620:100:6031:15::a27d:510f\n",
-            "Connecting to uc22c3992d71ab67165aa1bf9d38.dl.dropboxusercontent.com (uc22c3992d71ab67165aa1bf9d38.dl.dropboxusercontent.com)|162.125.81.15|:443... connected.\n",
+            "Location: https://uc33599680c2598565f6136d1ff6.dl.dropboxusercontent.com/cd/0/inline/CwfX4qE1dH29La5m9PSAMwzMlVPZUmxwnF1T4EnPbOzg-M6KT2LjzSq_C7Vf8J458fmja-dWV0ORjUxrDO0AaWpKKhpfKfyofHzJi3rSMmV57Dy2uuBYf1EIDfpBuKDzNaJhMRhO1mieJB4iZPpN8uNN/file?dl=1# [following]\n",
+            "--2025-08-31 04:26:27--  https://uc33599680c2598565f6136d1ff6.dl.dropboxusercontent.com/cd/0/inline/CwfX4qE1dH29La5m9PSAMwzMlVPZUmxwnF1T4EnPbOzg-M6KT2LjzSq_C7Vf8J458fmja-dWV0ORjUxrDO0AaWpKKhpfKfyofHzJi3rSMmV57Dy2uuBYf1EIDfpBuKDzNaJhMRhO1mieJB4iZPpN8uNN/file?dl=1\n",
+            "Resolving uc33599680c2598565f6136d1ff6.dl.dropboxusercontent.com (uc33599680c2598565f6136d1ff6.dl.dropboxusercontent.com)... 162.125.85.15, 2620:100:6035:15::a27d:550f\n",
+            "Connecting to uc33599680c2598565f6136d1ff6.dl.dropboxusercontent.com (uc33599680c2598565f6136d1ff6.dl.dropboxusercontent.com)|162.125.85.15|:443... connected.\n",
             "HTTP request sent, awaiting response... 302 Found\n",
-            "Location: /cd/0/inline2/CcZkStLfswltdho_6YAcNw92D0dYi7Ry-gUyXbLtHm1rPPCVVufOpsXoakcz6kv8yxRyib4LJBjzcZXpvSug0WLfDf37Oaiu7hx1bvZVtqTtn9lfRrzah42Ek6Ezrv0SB-b9vwfG1q4RHoGBo1prOLwbZX1xRO4eHFzti1UBxnU8swoT_I_YGx0rLugtgZVLPSHSunBuOPBhPEe3XkMtfGTBPLcKChtSKN7sZyJh-eV98fd_iPD-s79quA-dzJXjbhflX7LbjJY9aWL-n8r_KXHJu8dqHYz94IRc4A1SJFEdabCDbLsABVxvgldrLDRDRxZpZT_YzOmnrzzLZqGs5kihCA1DdYq306YLiMUh2vhsG1RrUu8OWfY5qRqg29wTRCs/file?dl=1 [following]\n",
-            "--2024-10-14 04:12:06--  https://uc22c3992d71ab67165aa1bf9d38.dl.dropboxusercontent.com/cd/0/inline2/CcZkStLfswltdho_6YAcNw92D0dYi7Ry-gUyXbLtHm1rPPCVVufOpsXoakcz6kv8yxRyib4LJBjzcZXpvSug0WLfDf37Oaiu7hx1bvZVtqTtn9lfRrzah42Ek6Ezrv0SB-b9vwfG1q4RHoGBo1prOLwbZX1xRO4eHFzti1UBxnU8swoT_I_YGx0rLugtgZVLPSHSunBuOPBhPEe3XkMtfGTBPLcKChtSKN7sZyJh-eV98fd_iPD-s79quA-dzJXjbhflX7LbjJY9aWL-n8r_KXHJu8dqHYz94IRc4A1SJFEdabCDbLsABVxvgldrLDRDRxZpZT_YzOmnrzzLZqGs5kihCA1DdYq306YLiMUh2vhsG1RrUu8OWfY5qRqg29wTRCs/file?dl=1\n",
-            "Reusing existing connection to uc22c3992d71ab67165aa1bf9d38.dl.dropboxusercontent.com:443.\n",
+            "Location: /cd/0/inline2/Cwdvq3agamap3mLNdg_3ZqZjfQbj4394jjhG5IroPWCnIOC4VKMuRXNO9j3uVTAWmsiKpH7rcWuiuF7Js5p4Tje9M5bp1JoZHknr1qXQT7m9jDkQM_0Y_orfeX0odtqwcjo9DSORK9-euWsAjqyOFtQUJ95dWfu3vXNTCRHuYUzUKXj_v9-lFn3WFMEferyZUwySG5YZNZNFE25sDSWjYJ9FxYxCyWQffgPBHXFFZrsVrUV-OtEszn_hTLgpu5ZHjeD1ihSTZmjIOgObnOsjNgixGBumNBmcxo-hPhdu5oK4Fik-JlWjcxwCapWUI_cUnCeFEr1xYlOulSa2N26I9llE3rlC5pS2uQ4AKE617mV2tFRcbIeDc4YvYjx4iUq0RPo/file?dl=1 [following]\n",
+            "--2025-08-31 04:26:29--  https://uc33599680c2598565f6136d1ff6.dl.dropboxusercontent.com/cd/0/inline2/Cwdvq3agamap3mLNdg_3ZqZjfQbj4394jjhG5IroPWCnIOC4VKMuRXNO9j3uVTAWmsiKpH7rcWuiuF7Js5p4Tje9M5bp1JoZHknr1qXQT7m9jDkQM_0Y_orfeX0odtqwcjo9DSORK9-euWsAjqyOFtQUJ95dWfu3vXNTCRHuYUzUKXj_v9-lFn3WFMEferyZUwySG5YZNZNFE25sDSWjYJ9FxYxCyWQffgPBHXFFZrsVrUV-OtEszn_hTLgpu5ZHjeD1ihSTZmjIOgObnOsjNgixGBumNBmcxo-hPhdu5oK4Fik-JlWjcxwCapWUI_cUnCeFEr1xYlOulSa2N26I9llE3rlC5pS2uQ4AKE617mV2tFRcbIeDc4YvYjx4iUq0RPo/file?dl=1\n",
+            "Reusing existing connection to uc33599680c2598565f6136d1ff6.dl.dropboxusercontent.com:443.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 2463365435 (2.3G) [application/binary]\n",
             "Saving to: ‘archive.zip’\n",
             "\n",
-            "archive.zip         100%[===================>]   2.29G  13.2MB/s    in 3m 2s   \n",
+            "archive.zip         100%[===================>]   2.29G  13.2MB/s    in 2m 53s  \n",
             "\n",
-            "2024-10-14 04:15:09 (12.9 MB/s) - ‘archive.zip’ saved [2463365435/2463365435]\n",
+            "2025-08-31 04:29:23 (13.5 MB/s) - ‘archive.zip’ saved [2463365435/2463365435]\n",
             "\n"
           ]
         }
